# mrs_uav_deployment

./: CMakeLists.txt  README.md  package.xml
.ci/: pre-commit
.github/workflows/: ci_ssh_test.yml  ssh.yml
config/: communication_config.yaml  trajectory_checker.yaml  uav_names.yaml
config/camera_calibrations/: mv_25001954.yaml  mv_25001954_equi.yaml  mv_25001954_radtan.yaml  mv_25002493.yaml  mv_25002503.yaml  mv_25002514.yaml  mv_25002533.yaml  mv_26805832_darpa.yaml  mv_26805832_f21_old.yaml  mv_26805832_radtan.yaml  mv_26805850.yaml  mv_26805877_darpa.yaml  mv_26805877_radtan.yaml  mv_26805883.yaml  mv_26807144.yaml  (+32 more)
launch/: hector_slam.launch  hector_slam_vanilla.launch  logitech_joystick.launch  node_crash_checker.launch  relsense.launch  rosbag_checker.launch  rviz.launch  sensors.launch  trajectory_checker.launch
scripts/: change_uav_control.sh  check_ros_package.sh  cpu_plot.py  monitor.sh  node_crash_checker.py  record_remote.sh  record_top.sh  refactor_rviz_config.sh  refactor_rviz_config_generic.sh  remote_log.sh  rosbag_checker.py  rosbag_rviz.sh  rosbag_topic_size.py  run_nimbro.py  rviz.sh  set_broadcast_rc_variable.sh  trajectory_checker.py
ssh/: danv  danv.pub  david  david.pub  filipopo  filipopo.pub  generate_ssh_config.sh  git_usernames  git_usernames.csv  juro  juro.pub  manuel  manuel.pub  marlon  marlon.pub  marlonriv  marlonriv.pub  martinjir  martinjir.pub  michal  michal.pub  misa  misa.pub  musilto  musilto.pub  novosma  novosma.pub  ondra  ondra.pub  pochopav  pochopav.pub  swati  swati.pub  valseb  valseb.pub  vbakirci  vbakirci.pub
(+136 files in other folders)
