<?xml version="1.0"?>
<package format="2">

  <name>mrs_uav_deployment</name>
  <version>1.0.0</version>
  <description>The mrs_uav_deployment package</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

</package>
